@@ -17,135 +17,84 @@
   -->
 
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-  <modelVersion>4.0.0</modelVersion>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+    <modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <artifactId>kp-rpg</artifactId>
-    <groupId>de.kaiserpfalz-edv.rpg</groupId>
-    <version>1.0.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
-  <artifactId>rpg-bot</artifactId>
-  <name>KP RPG :: Discord Bot</name>
-  <description>The discord services as a bot.</description>
+    <parent>
+        <artifactId>kp-rpg</artifactId>
+        <groupId>de.kaiserpfalz-edv.rpg</groupId>
+        <version>1.0.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+    <artifactId>rpg-bot</artifactId>
+    <name>KP RPG :: Discord Bot</name>
+    <description>The discord services as a bot.</description>
 
-  <properties>
-    <activate.jcenter>true</activate.jcenter>
-  </properties>
+    <properties>
+        <activate.jcenter>true</activate.jcenter>
+    </properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>de.kaiserpfalz-edv.rpg</groupId>
-      <artifactId>rpg-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>de.kaiserpfalz-edv.rpg</groupId>
-      <artifactId>rpg-traveller</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>de.kaiserpfalz-edv.rpg</groupId>
-      <artifactId>rpg-dsa5</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>de.kaiserpfalz-edv.rpg</groupId>
-      <artifactId>rpg-fate</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>de.kaiserpfalz-edv.rpg</groupId>
-      <artifactId>rpg-hexxen</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>de.kaiserpfalz-edv.rpg</groupId>
-      <artifactId>rpg-saga</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>de.kaiserpfalz-edv.rpg</groupId>
-      <artifactId>rpg-wod</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>de.kaiserpfalz-edv.rpg</groupId>
-      <artifactId>rpg-torg</artifactId>
-    </dependency>
+    <dependencies>
+        <dependency>
+            <groupId>de.kaiserpfalz-edv.rpg</groupId>
+            <artifactId>rpg-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.kaiserpfalz-edv.rpg</groupId>
+            <artifactId>rpg-traveller</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.kaiserpfalz-edv.rpg</groupId>
+            <artifactId>rpg-dsa5</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.kaiserpfalz-edv.rpg</groupId>
+            <artifactId>rpg-fate</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.kaiserpfalz-edv.rpg</groupId>
+            <artifactId>rpg-hexxen</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.kaiserpfalz-edv.rpg</groupId>
+            <artifactId>rpg-saga</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.kaiserpfalz-edv.rpg</groupId>
+            <artifactId>rpg-wod</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>de.kaiserpfalz-edv.rpg</groupId>
+            <artifactId>rpg-torg</artifactId>
+        </dependency>
 
-    <dependency>
-      <groupId>net.dv8tion</groupId>
-      <artifactId>JDA</artifactId>
-      <version>3.5.0_329</version>
-    </dependency>
+        <dependency>
+            <groupId>net.dv8tion</groupId>
+            <artifactId>JDA</artifactId>
+        </dependency>
 
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-arc</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-vertx</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-elytron-security-oauth2</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-resteasy-jackson</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-resteasy-multipart</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-micrometer</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.micrometer</groupId>
-      <artifactId>micrometer-registry-prometheus</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-smallrye-fault-tolerance</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-smallrye-openapi</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-smallrye-opentracing</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>javax.ws.rs</groupId>
-      <artifactId>javax.ws.rs-api</artifactId>
-      <version>2.0.1</version>
-    </dependency>
-    <dependency>
-      <groupId>jakarta.annotation</groupId>
-      <artifactId>jakarta.annotation-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>jakarta.inject</groupId>
-      <artifactId>jakarta.inject-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>jakarta.enterprise</groupId>
-      <artifactId>jakarta.enterprise.cdi-api</artifactId>
-    </dependency>
-  </dependencies>
+        <dependency>
+            <groupId>com.github.rjeschke</groupId>
+            <artifactId>txtmark</artifactId>
+        </dependency>
 
-  <build>
-    <plugins>
-      <plugin>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <argLine>@{argLine} --add-opens de.kaiserpfalzedv.rpg.bot/ALL=ALL-UNNAMED</argLine>
-          <systemPropertyVariables>
-            <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
-            <!--suppress UnresolvedMavenProperty -->
-            <maven.home>${maven.home}</maven.home>
-          </systemPropertyVariables>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-quartz</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-openshift</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-kubernetes</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>de.kaiserpfalz-edv.rpg.test-support</groupId>
+            <artifactId>mongodb-testsupport</artifactId>
+        </dependency>
+    </dependencies>
 </project>
